# XenoMax

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  XenoMax.sln  XenoMax.vcxproj  XenoMax.vcxproj.filters
src/: DllEntry.cpp  XenoImp.cpp  XenoImp.rc  XenoImport.cpp  XenoImport.h  XenoMax.def  XenoMax.h  resource.h
